# chl_mathmatics

./: CMakeLists.txt  README.md  main.cpp
examples/: jacobian.cpp  newton.cpp  partial_derivative.cpp
module/: CMakeLists.txt
module/include/: compile_loop.hpp  compute.h  compute.hpp  five_points.hpp  matrix.h  matrix.hpp
